# ib_strategy_project

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGES.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  P0_IMPLEMENTATION_REPORT.md  README.md  README_QUICKSTART.md  comprehensive_test_suite.py  create_env_example.py  create_test_env.py  debug_calculate_orders.py  debug_market_data.py  debug_orders.py  debug_positions.py  demo.py  financial_optimization_roadmap.py  fix_leverage_calculation.py  fix_short_position_bug.py  ib_strategy_project - Shortcut.lnk  investigate_short_positions.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  simple_test.py  small_test_portfolio.csv  test_currency_fixes.py  test_currency_handling.py  test_emergency_liquidation.py  test_order_placement.py  test_simple_3stock.csv  test_simple_order.py  test_small_portfolio.csv
config/: env.example
docs/: COMPREHENSIVE_TESTING_SUMMARY.md  IB_API_BEST_PRACTICES.md  INTERACTIVE_BROKERS_SETUP.md  MIGRATION.md  PORTFOLIO_REBALANCING_STRATEGIES.md  PR_DESCRIPTION.md
examples/: portfolio.csv  portfolio.yaml
portfolio_snapshots/: portfolio_20250604_074232.json  portfolio_20250604_074255.json  portfolio_20250604_080427.json  portfolio_20250604_082813.json  portfolio_20250604_083823.json
scripts/: cleanup_p0.py
src/config/: portfolio.py  settings.py
src/core/: connection.py  exceptions.py  types.py
src/data/: indicators.py  market_data.py
src/execution/: base_executor.py  batch_executor.py  executor.py  native_batch_executor.py  smart_executor.py
src/portfolio/: manager.py
src/strategy/: __init__.py  enhanced_fixed_leverage.py  fixed_leverage.py  vix_leverage.py
src/utils/: __init__.py  currency.py  delay.py  logger.py  notifications.py
tests/: README.md  conftest.py  mock_gateway.py  test_batch_executor_edgecases.py  test_connection_edgecases.py  test_connection_manager.py  test_end_to_end.py  test_executor_features.py  test_indicators.py  test_manager_edgecases.py  test_smart_executor.py
tests/data/: README.md  test_portfolio.csv
tests/functional/: README.md  comprehensive_test_suite.py  test_order_placement.py
tests/integration/: README.md  test_portfolio_rebalancing.py  test_simple_order.py
tests/tools/: README.md  debug_market_data.py  fix_critical_issues.py
tests/unit/: test_currency_fixes.py
